--- a/src/styles.css
+++ b/src/styles.css
@@ -18,9 +18,13 @@ body {
 #cookieClickerDiv {
   float: left;
   width: 70%;
+  background-image: url(/img/table.jpg);
 }
 
 #gameInterfaceDiv {
   float: left;
   width: 30%;
+}
+
+.cookieClickerDiv {
 }
