--- a/src/GameInterface/GameInterface.module.css
+++ b/src/GameInterface/GameInterface.module.css
@@ -4,10 +4,10 @@
 
 .shopDiv {
   height: 70vh;
-  background-image: url(/img/shop.jpg);
+  background-image: url(https://rawcdn.githack.com/adrianoli/CookieClicker/659986fc5b7f8fd94a21e1f3075d27f6562387cd/public/img/shop.jpg);
 }
 
 .userScoreDiv {
   height: 30vh;
-  background-image: url(/img/resultBackground.jpg);
+  background-image: url(https://rawcdn.githack.com/adrianoli/CookieClicker/659986fc5b7f8fd94a21e1f3075d27f6562387cd/public/img/resultBackground.jpg);
 }
