--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@
 #cookieClickerDiv {
   float: left;
   width: 70%;
-  background-image: url(/img/table.jpg);
+  background-image: url(https://uploads.codesandbox.io/uploads/user/d2fb2219-4a06-4a5b-8258-ae3845a0e520/p_3y-table.jpg);
   background-position: center;
   background-size: cover;
 }
